@startuml
!define MODEL_COLOR #FFCCFF
!define CONTROLLER_COLOR #CCCCFF
!define ACTION_COLOR #CCFFCC

package "Models" <<Database>> {
  class User <<Model>> {
    ..
  }
  class Post <<Model>> {
    ..
  }
  class Comment <<Model>> {
    ..
  }
  class Category <<Model>> {
    ..
  }
  class Tag <<Model>> {
    ..
  }
  class Like <<Model>> {
    ..
  }
}

package "Controllers" <<Frame>> {
  class Api__V1__UsersController <<Controller>> {
    +index()
  }
  class Api__V1__PostsController <<Controller>> {
    +index()
  }
  class Api__V1__CommentsController <<Controller>> {
  }
  class Api__V1__AnalyticsController <<Controller>> {
    +users()
  }
}

User --> "*" Post : posts
User --> "*" Comment : comments
Post --> "1" User : user
Post --> "*" Comment : comments
Comment --> "1" User : user
Comment --> "1" Post : post
GET__api_v1_users --> index : routes_to
GET__api_v1_posts --> index : routes_to
GET__api_v1_analytics_users --> users : routes_to
index --> UserService : fetch_active_users
index --> PostService : public_posts
users --> AnalyticsService : user_stats
UserService --> User : User.active
PostService --> Post : Post.published
AnalyticsService --> User : User.statistics
AnalyticsService --> Post : Post.metrics

@enduml